k8s/infra/metallb/rendered/metallb/speaker.yaml
---
# Source: metallb/templates/speaker.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: metallb-speaker
  namespace: "metallb-system"
  labels:
    helm.sh/chart: metallb-0.16.0
    app.kubernetes.io/name: metallb
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/version: "v0.16.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: speaker
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: metallb
      app.kubernetes.io/instance: metallb
      app.kubernetes.io/component: speaker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metallb
        app.kubernetes.io/instance: metallb
        app.kubernetes.io/component: speaker
    spec:
      serviceAccountName: metallb-speaker
      terminationGracePeriodSeconds: 0
      hostNetwork: true
      volumes:
        - name: memberlist
          secret:
            secretName: metallb-memberlist
            defaultMode: 420
        - name: metallb-excludel2
          configMap:
            defaultMode: 256
            name: metallb-excludel2
        - name: memberlist-config
          configMap:
            name: metallb-memberlist-config
            optional: true
      containers:
        - name: speaker
          image: quay.io/metallb/speaker:v0.16.0
          args:
            - --port=9120
            - --log-level=info
          ports:
            - name: metricshttps
              containerPort: 9120
            - name: memberlist-tcp
              containerPort: 7946
              protocol: TCP
            - name: memberlist-udp
              containerPort: 7946
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 17472
              host: 127.0.0.1
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 17472
              host: 127.0.0.1
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 25m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_RAW
          volumeMounts:
            - name: memberlist-config
              mountPath: /etc/metallb/memberlist
              readOnly: true
            - name: memberlist
              mountPath: /etc/ml_secret_key
            - name: metallb-excludel2
              mountPath: /etc/metallb
      nodeSelector:
        "kubernetes.io/os": linux
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
          operator: Exists
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
